--- a/boston_housing_data.ipynb
+++ b/boston_housing_data.ipynb
@@ -581,11 +581,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b687efa9",
    "metadata": {},
    "source": [
-    "## sumaring the stats of the data\n"
+    "## summarizing the stats of the data\n"
    ]
   },
   {
@@ -814,11 +815,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c74f1b6a",
    "metadata": {},
    "source": [
-    "## check the missing values\n"
+    "## checking for missing values\n"
    ]
   },
   {
@@ -2150,11 +2152,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e8763ed4",
    "metadata": {},
    "source": [
-    "## Standardize the dataset \n"
+    "## Standardizing the dataset \n"
    ]
   },
   {
@@ -2189,11 +2192,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4510aa1f",
    "metadata": {},
    "source": [
-    "#modol training\n"
+    "#model training\n"
    ]
   },
   {
@@ -2282,24 +2286,6 @@
    ],
    "source": [
     "print(regression.intercept_)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ea193e72",
-   "metadata": {},
-   "source": [
-    "## on which parameter the midel is trained\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1d10c293",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(regression.get_params())"
    ]
   },
   {
@@ -2611,7 +2597,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0 (default, Jun 28 2018, 08:04:48) [MSC v.1912 64 bit (AMD64)]"
+   "version": "3.7.0"
   },
   "vscode": {
    "interpreter": {
