--- a/boston_housing_data.ipynb
+++ b/boston_housing_data.ipynb
@@ -2249,7 +2249,7 @@
    "outputs": [],
    "source": [
     "import pickle \n",
-    "pickle.dump(open('scaling.pkl','wb'))"
+    "pickle.dump(open(scaler,'scaling.pkl','wb'))"
    ]
   },
   {
@@ -2540,7 +2540,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pickle.model=pickle.load(open('regmodel.pkl','rb'))"
+    "pickle_model=pickle.load(open('regmodel.pkl','rb'))"
    ]
   },
   {
@@ -2561,7 +2561,7 @@
     }
    ],
    "source": [
-    "pickle.model.predict(scaler.transform(boston.data[0].reshape(1,-1)))"
+    "pickle_model.predict(scaler.transform(boston.data[0].reshape(1,-1)))"
    ]
   },
   {
